--- a/DECODIFICADOR/assets/main.css
+++ b/DECODIFICADOR/assets/main.css
@@ -2,8 +2,80 @@ body {
 position: relative;
 width: 1440px;
 height: 1024px;
-
-/* Light blue/light-blue-100 */
-
 background: #F3F5FC;
+}
+
+button.criptografar {
+    height: 67px;
+    width: 328px;
+    background: #0A3871;
+    border-radius: 24px;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 24px;
+    gap: 8px;
+}
+
+button.descriptografar {
+    height: 67px;
+    width: 328px;
+    background: #D8DFE8;
+    border-radius: 24px;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 24px;
+    gap: 8px;
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+}
+
+
+.decodificador-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    width: 60%;
+    height: 100vh;
+}
+
+.button-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 1.3rem 0;
+}
+
+.db-buttons {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1rem;
+}
+
+
+label, textarea {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 150%;
+    color: #0A3871;
+}
+
+textarea {
+    padding: 10px;
+    max-width: 100%;
+    line-height: 1.5;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px #999;
+    display: block;
+}
+
+label {
+    display: block;
+    margin-bottom: 10px;
 }
