--- a/DECODIFICADOR/assets/main.css
+++ b/DECODIFICADOR/assets/main.css
@@ -29,6 +29,10 @@ button.descriptografar {
     border-radius: 24px;
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 
 .decodificador-wrapper {
     display: flex;
@@ -45,14 +49,6 @@ button.descriptografar {
     justify-content: center;
     width: 100%;
     padding: 1.3rem 0;
-}
-
-.db-buttons {
-    display: flex;
-    width: 100%;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 1rem;
 }
 
 
@@ -78,4 +74,12 @@ textarea {
 label {
     display: block;
     margin-bottom: 10px;
+}
+
+solucao {
+    margin-top: 20px;
+    margin-left: 90px;
+    text-align: center;
+    padding: 50px 0px;
+    box-sizing: border-box;
 }
